# fuzzing-tool-for-network-protocols

./: Cargo.toml  README.md
.github/workflows/: ci.yml
examples/: dns_fuzzing.sh  fuzzer.toml  mqtt_iot_fuzzing.sh
fuzzing_results/: crash_report.txt  crash_summary.json  summary.txt
fuzzing_results/crashes/: crash_0000_metadata.json  crash_0001_metadata.json  crash_0002_metadata.json  crash_0003_metadata.json  crash_0004_metadata.json  crash_0005_metadata.json  crash_0006_metadata.json  crash_0007_metadata.json  crash_0008_metadata.json  crash_0009_metadata.json  crash_0010_metadata.json  crash_0011_metadata.json  crash_0012_metadata.json  crash_0013_metadata.json  crash_0014_metadata.json  crash_0015_metadata.json  crash_0016_metadata.json  crash_0017_metadata.json  crash_0018_metadata.json  crash_0019_metadata.json  crash_0020_metadata.json  crash_0021_metadata.json  crash_0022_metadata.json  crash_0023_metadata.json  crash_0024_metadata.json  crash_0025_metadata.json  crash_0026_metadata.json  crash_0027_metadata.json  crash_0028_metadata.json  crash_0029_metadata.json  crash_0030_metadata.json  crash_0031_metadata.json  crash_0032_metadata.json  crash_0033_metadata.json  crash_0034_metadata.json  crash_0035_metadata.json  crash_0036_metadata.json  crash_0037_metadata.json  crash_0038_metadata.json  crash_0039_metadata.json  (+10 more)
src/: main.rs
src/coverage/: edge_coverage.rs  feature_coverage.rs  mod.rs
src/fuzzer/: crash_detector.rs  custom_mutators.rs  mod.rs  network_executor.rs
src/protocols/: dns.rs  mod.rs  mqtt.rs
src/utils/: logging.rs  mod.rs  (+2 more)
