[package]
name = "network-protocol-fuzzer"
version = "0.1.0"
edition = "2021"
description = "Advanced fuzzing tool for network protocols (DNS, MQTT) with coverage-guided fuzzing"
license = "MIT"
authors = ["Network Protocol Fuzzer Team"]
keywords = ["fuzzing", "network", "protocols", "security", "testing"]
categories = ["development-tools::testing", "network-programming"]

[dependencies]
# Core fuzzing framework
libafl = "0.11"
libafl_bolts = "0.11"

# Structured input generation
arbitrary = { version = "1.3", features = ["derive"] }

# Async networking
tokio = { version = "1.35", features = ["full"] }
tokio-util = "0.7"

# Protocol parsing and generation
dns-parser = "0.8"
mqttrs = "0.4"
toml = "0.8"
bytes = "1.5"

# Serialization and logging
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
log = "0.4"
env_logger = "0.10"
chrono = { version = "0.4", features = ["serde"] }

# Error handling and utilities
anyhow = "1.0"
thiserror = "1.0"
clap = { version = "4.4", features = ["derive"] }
uuid = { version = "1.6", features = ["v4"] }

# Network utilities
socket2 = "0.5"
rand = "0.8"

# Coverage and instrumentation
nix = "0.27"

[dev-dependencies]
tokio-test = "0.4"
criterion = "0.5"

[[bin]]
name = "protocol-fuzzer"
path = "src/main.rs"

[profile.release]
debug = true
lto = true
codegen-units = 1

[profile.dev]
debug = true
